--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
-language: node_js
+language: minimal
 
-node_js:
-  - 13
+services: docker
 
-services:
-  - docker
+env:
+  - DOCKER_COMPOSE_VERSION=1.23.2
 
-install: 
-  - echo "nothing needs to be installed"
+before_install:
+  - docker -v && docker-compose -v
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+  - chmod +x ./kubectl
+  - sudo mv ./kubectl /usr/local/bin/kubectl
 
-before_script: 
-  - echo "no tests"
 
-script: 
-  # Print the docker version for logging
-  - docker --version
-  - docker-compose -f docker-compose-build.yml build
 
-# Tasks to perform after the process is successful. Formatting the
-# Docker username and password as below enables you to programmatically
-# log in without having the password exposed in logs.
-after_success:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    - docker-compose -f docker-compose-build.yml push
+install:
+  - docker-compose -f docker-compose-build.yaml build --parallel 
