--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,9 @@ before_install:
 
 
 install:
-  - docker-compose -f docker-compose-build.yaml build --parallel 
+  - docker-compose -f docker-compose-build.yaml build --parallel
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push ahmeddoma/udagram-api-feed
+  - docker push ahmeddoma/udagram-api-user
+  - docker push ahmeddoma/udagram-reverseproxy
+  
