--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ install:
   - docker-compose -f docker-compose-build.yaml build --parallel
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker tag udagram-api-feed ahmeddoma/udagram-api-feed
-  - docker tag udagram-api-feed ahmeddoma/udagram-api-user
-  - docker tag udagram-api-feed ahmeddoma/udagram-api-frontend
-  - docker tag udagram-api-feed ahmeddoma/udagram-api-reverseproxy
+  - docker tag udagram-api-user ahmeddoma/udagram-api-user
+  - docker tag udagram-frontend ahmeddoma/udagram-frontend
+  - docker tag udagram-reverseproxy ahmeddoma/reverseproxy
   - docker push ahmeddoma/udagram-api-feed
   - docker push ahmeddoma/udagram-api-user
-  - docker push ahmeddoma/udagram-api-frontend
-  - docker push ahmeddoma/udagram-reverseproxy
+  - docker push ahmeddoma/udagram-frontend
+  - docker push ahmeddoma/reverseproxy
   
