--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,13 @@ script:
   # Make sure the Docker services are running in your local machine
   # Remove unused and dangling images
   # - docker image prune --all
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker-compose -f docker-compose-build.yaml build --parallel
-  # - docker-compose -f docker-compose-build.yaml push
+  - docker-compose -f docker-compose-build.yaml push
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push ahmeddoma/reverseproxy:v2
-  - docker push ahmeddoma/udagram-api-feed:v2
-  - docker push ahmeddoma/udagram-api-user:v2
-  - docker push ahmeddoma/udagram-frontend:v2
+  #- docker-compose -f docker-compose-build.yaml push
+  #- docker push ahmeddoma/reverseproxy
+  #- docker push ahmeddoma/udagram-api-feed
+  #- docker push ahmeddoma/udagram-api-user
+  #- docker push ahmeddoma/udagram-frontend
