--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push ahmeddoma/reverseproxy
-  - docker push ahmeddoma/udagram-api-feed
-  - docker push ahmeddoma/udagram-api-user
-  - docker push ahmeddoma/udagram-frontend
+  - docker push ahmeddoma/udagram-api-user:v2
+  - docker push ahmeddoma/udagram-api-feed:v2
+  - docker push ahmeddoma/udagram-frontend:v2
+  - docker push ahmeddoma/reverseproxy:v2
