--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy
+    image: ahmeddoma/reverseproxy:v2
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user
+    image: ahmeddoma/udagram-api-user:v2
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed
+    image: ahmeddoma/udagram-api-feed:v2
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend
+    image: ahmeddoma/udagram-frontend:v2
