--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,7 @@ after_success:
   - docker push ahmeddoma/udagram-api-feed:v2
   - docker push ahmeddoma/udagram-frontend:v2
   - docker push ahmeddoma/reverseproxy:v2
+  - docker pull ahmeddoma/udagram-api-user:v2
+  - docker pull ahmeddoma/udagram-api-feed:v2
+  - docker pull ahmeddoma/udagram-frontend:v2
+  - docker pull ahmeddoma/reverseproxy:v2
