--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,8 @@ script:
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push ahmeddoma/udagram-api-user:v2
-  - docker push ahmeddoma/udagram-api-feed:v2
-  - docker push ahmeddoma/udagram-frontend:v2
-  - docker push ahmeddoma/reverseproxy:v2
   - docker pull ahmeddoma/udagram-api-user:v2
   - docker pull ahmeddoma/udagram-api-feed:v2
   - docker pull ahmeddoma/udagram-frontend:v2
+  - docker pull ahmeddoma/reverseproxy:v2
   - docker pull ahmeddoma/reverseproxy:v2
