Add udagram-Kubernetis final

--- a/udagram-kubernetes/udagram-reverse-proxy-deployment.yaml
+++ b/udagram-kubernetes/udagram-reverse-proxy-deployment.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: reverseproxy
+  # namespace: udagram
   labels:
     app: reverseproxy
-  name: reverseproxy
 spec:
   replicas: 1
   selector:
@@ -15,16 +16,9 @@ spec:
         app: reverseproxy
     spec:
       containers:
-        - image: ahmeddoma/reverseproxy:v3
+        - image: ahmeddoma/reverseproxy:latest
           name: reverseproxy
           imagePullPolicy: Always
-          # resources:
-          #   requests:
-          #     memory: "64Mi"
-          #     cpu: "250m"
-          #   limits:
-          #     memory: "1024Mi"
-          #     cpu: "500m"
           ports:
             - containerPort: 8080
       restartPolicy: Always
